Add getTopRecipes endpoint
